--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "firebase": "^10.3.0",
     "install": "^0.13.0",
     "npm": "^9.8.1",
     "react": "^18.2.0",
